# ARCropolis

./: .gitignore  .gitmodules  Cargo.toml  README.md  changelog.toml  log.txt  rustfmt.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  crash-or-incorrect-behavior.md  crash-report-v2.yaml  crash-report.md  crash-report.yaml  feature-suggestion.md  feature-suggestion.yaml  incorrect-behavior.md  incorrect-behavior.yaml  infinite-loading.md  infinite-loading.yaml  new-feature.yaml  panic.md  panic.yaml  quality-of-life-improvements.md  quality-of-life-suggestion.md  quality-of-life-suggestion.yaml
.github/workflows/: auto-close-issue.yml  build.yml  build_branch.yml  manual_build.yml  master_format  nightly_build.yml  pr_comment.yml  rust_build.yml  rustdoc.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  offsets.rs  utils.rs
crates/menus/: Cargo.toml
crates/menus/resources/css/: arcadia.css
crates/menus/resources/js/: workspaces.js
crates/menus/resources/templates/: configurator.html  help.html  menu.html  notes.html
crates/menus/src/: lib.rs  utils.rs
crates/menus/src/arcadia/: mod.rs
crates/menus/src/changelog/: mod.rs
crates/menus/src/config/: mod.rs
crates/menus/src/files/: mod.rs
crates/menus/src/workspaces/: mod.rs
resources/: copy.py  override.json
resources/css/: arcadia.css  common.css  configurator.css  selector.css  workspaces.css
resources/js/: arcadia.js  common.js  configurator.js  menu.js  selector.js  workspaces.js
resources/templates/: arcadia.html  configurator.html  help.html  index.html  menu.html  notes.html  selector.html  workspaces.html
selector/templates/: index.html
src/: api.rs  cache.rs  callbacks.rs  chainloader.rs  config.rs  cpp_vector.rs  fixes.rs  fs.rs  fuse.rs  hashes.rs  lib.rs  lib.rs.bak  logging.rs  menus.rs  mod_files.rs  offsets.rs  patching.rs  prepo.rs  remote.rs  replacement.rs  replacement_files.rs  res_list.rs  resloadingthread.rs  resource.rs  runtime.rs  selector.rs  stream.rs  unsharing.rs  update.rs  util.rs  utils.rs  visit.rs
src/api/: callback.rs  event.rs  file.rs  lua.rs  utils.rs
src/config/: mod.rs  readable.rs  writeable.rs
src/fs/: api.rs  cache.rs  discover.rs  inference.rs  interner.rs  loaders.rs  mod.rs  mode.rs  types.rs  utils.rs  visit.rs
src/fuse/: arc.rs  mods.rs
src/lua/: lua.rs  mod.rs
src/menus/: arcadia.rs  help.rs  mod.rs  notes.rs  workspace.rs
src/menus/arcadia/: mod.rs
src/menus/changelog/: mod.rs
src/menus/config/: mod.rs
src/menus/files/: mod.rs
src/menus/resources/: browser-editing.html  hold.html  index.html  index.js  old_index.html  old_style.css  style.css
src/menus/resources/arcropolis/selector/templates/: index.html
src/menus/workspaces/: mod.rs
src/mod_files/: arc_file.rs  stream_file.rs
src/modfs/: discovery.rs  mod.rs  patch.rs  registry.rs  virt.rs
src/modfs/handlers/: bgm.rs  config.rs  mod.rs  motionlist.rs  msbt.rs  nus3audio.rs  prc.rs
src/remote/: arc.rs  search.rs  table.rs
src/replacement/: addition.rs  config.rs  extensions.rs  lookup.rs  preprocess.rs  stream.rs  threads.rs  uncompressed.rs  unshare.rs
src/resource/: containers.rs  types.rs
