[package]
name = "arcropolis"
version = "3.4.0"
authors = ["Raytwo <raytwo@arcropolis.com>, blujay <the.blu.dev@gmail.com>, jam1garner <jam@jam1.re>, CoolSonicKirby <alihussain2001@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
semver = { version = "1", features = ["serde"] }
num-derive = "0.3.3"
num-traits = "0.2"
walkdir = "2.3.2"
parking_lot = "0.11"
once_cell = "1.12.0"
thiserror = "1.0.30"
camino = { version = "1.0.7", features = ["serde1"] } 
ahash = { version = "0.7.6", features = ["std"] }
minreq = { version = "=2.2.1", features = ["https", "json-using-serde"] }
# Switch utilities
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git"}
skyline-web = { git = "https://github.com/skyline-rs/skyline-web", optional = true }
skyline-config = { git = "https://github.com/skyline-rs/skyline-config" }
# For the updater
zip = { version = "0.5", default-features = false, features = ["deflate"], optional = true }
gh-updater = { git = "https://github.com/blu-dev/gh-updater", optional = true }
# For offset caching and legacy configuration
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
# For the logger
log = "0.4.14"
owo-colors = "3.0.1"
strip-ansi-escapes = "0.1.1"
bincode = "1.3.3"
# To manage mods
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["smash-runtime", "rust-zstd", "serialize"] }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api", rev="7a94ccbb21dcddee3ba467802ef6629c19a219f1" }
serde_yaml = "0.8.24"
# For arc:/ and mods:/
nn-fuse = { git = "https://github.com/Raytwo/nn-fuse" }
# For prcx/prcxml
prcx = { git = "https://github.com/blu-dev/prcx", branch = "xml-style" }
# For xmsbt
xml-rs = "0.8"
serde-xml-rs = "0.5.1"
msbt = { git = "https://github.com/RoccoDev/msbt-rs", branch = "feature/builder-from-impl" }
# For inputs
ninput = { git = "https://github.com/blu-dev/ninput" }

[patch.crates-io]
ring = { git = "https://github.com/skyline-rs/ring", branch = "0.16.20" }
webpki = { git = "https://github.com/skyline-rs/webpki" }

[features]
updater = ["zip", "gh-updater"]
web = ["skyline-web"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
