[package]
name = "arcropolis"
version = "3.9.0"
authors = ["Raytwo <raytwo@arcropolis.com>, blujay <the.blu.dev@gmail.com>, jam1garner <jam@jam1.re>, CoolSonicKirby <alihussain2001@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"
package-resources = [
    { local = "changelog.toml", package = "ultimate/arcropolis/changelog.toml" }
]

[lib]
crate-type = ["cdylib"]

[dependencies]
semver = { version = "1", features = ["serde"] }
num-derive = "0.3.3"
num-traits = "0.2"
walkdir = "2.3.2"
parking_lot = "0.12"
once_cell = "1.12.0"
thiserror = "1.0.30"
minreq = { version = "2", features = ["https-native", "json-using-serde"], optional = true }
camino = "1"
# Switch utilities
skyline = { git = "https://github.com/Raytwo/skyline-rs", branch="preview" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
skyline-config = { git = "https://github.com/skyline-rs/skyline-config" }
skyline-communicate = { git = "https://github.com/blu-dev/skyline-communicate" }
# For the updater
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
gh-updater = { git = "https://github.com/blu-dev/gh-updater", default-features = false, features = ["native-tls"], optional = true }
# For offset caching and legacy configuration
toml = "0.5.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# For the logger
log = "0.4.14"
owo-colors = "3.0.1"
strip-ansi-escapes = "0.1.1"
bincode = "1.3.3"
# To manage mods
orbits = { git = "https://github.com/blu-dev/orbits" }
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["smash-runtime", "rust-zstd", "serialize"] }
hash40 = "1.2"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
arc-config = { git = "https://github.com/blu-dev/arc-config", features = ["runtime"] }
# For arc:/ and mods:/
nn-fuse = { git = "https://github.com/Raytwo/nn-fuse" }
prcx = { git = "https://github.com/blu-dev/prcx", branch = "xml-style" }
# For xmsbt
xml-rs = "0.8"
serde-xml-rs = "0.6"
msbt = { git = "https://github.com/RoccoDev/msbt-rs", branch = "feature/builder-from-impl" }
# For patch3audio
nus3audio = "1.2.0"
# For motion list patching
motion_list_rs = "1.4.3"
serde_yaml = "0.8"
# for bgm property patching
smash-bgm-property = "1.1.0"
# For inputs
ninput = { git = "https://github.com/blu-dev/ninput" }

[patch.crates-io]
nnsdk = { git = "https://github.com/Raytwo/nnsdk-rs", branch="account_fs" }
native-tls = { git = "https://github.com/skyline-rs/rust-native-tls", branch="switch" }

[features]
default = ["online"]
online = ["zip", "gh-updater", "minreq"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
