[package]
name = "arcropolis"
version = "4.0.6"
authors = ["Raytwo <raytwo@arcropolis.com>, blujay <the.blu.dev@gmail.com>, jam1garner <jam@jam1.re>, CoolSonicKirby <alihussain2001@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"
# package-resources = [
#     { local = "changelog.toml", package = "ultimate/arcropolis/changelog.toml" }
# ]

[lib]
crate-type = ["cdylib"]

[dependencies]
semver = { version = "1", features = ["serde"] }
num-derive = "0.4.0"
num-traits = "0.2.15"
walkdir = "2.3.3"
# parking_lot = "0.12.1"
thiserror = "1.0.43"
camino = "1"
# Switch utilities
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
skyline-config = { git = "https://github.com/skyline-rs/skyline-config" }
# For the updater
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
gh-updater = { git = "https://github.com/blu-dev/gh-updater", default-features = false, features = ["native-tls"], optional = true }
minreq = { version = "2", features = ["https-native", "json-using-serde"], optional = true }
# For offset caching and legacy configuration
toml = "0.5.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# For the logger
log = "0.4.19"
owo-colors = "3.5.0"
strip-ansi-escapes = "0.1.1"
bincode = "1.3.3"
# To manage mods
orbits = { git = "https://github.com/blu-dev/orbits" }
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["smash-runtime", "rust-zstd", "serialize"] }
hash40 = "1.3"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
arc-config = { git = "https://github.com/blu-dev/arc-config", features = ["runtime"] }
# For arc:/ and mods:/
nn-fuse = { git = "https://github.com/Raytwo/nn-fuse" }
prcx = { git = "https://github.com/zrksyd/prcx", branch = "xml-style-zrksyd" }
# For xmsbt
xml-rs = "0.8.15"
serde-xml-rs = "0.6.0"
msbt = { git = "https://github.com/RoccoDev/msbt-rs", branch = "feature/builder-from-impl" }
base64 = "0.21.2"
# For patch3audio
nus3audio = "1.2.0"
# For motion list patching
motion_list_rs = "1.4.3"
serde_yaml = "0.8"
# for bgm property patching
smash-bgm-property = "1.2.0"
# For inputs
ninput = { git = "https://github.com/blu-dev/ninput" }
# For Offset Searching
lazysimd = { git = "https://github.com/Raytwo/lazysimd" }
config = { path = "crates/config" }
menus = { path = "crates/menus", optional = true }

[patch.crates-io]
# Specifying latest commit because git only doesn't use latest changes
native-tls = { git = "https://github.com/skyline-rs/rust-native-tls", rev = "f202fca"  }

[features]
default = ["ui"]
online = ["zip", "gh-updater", "minreq"]
ui = ["dep:menus"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 1
incremental = true
debug = 1

[profile.release.package."*"]
opt-level = 3