[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.11"
log = "0.4.19"
smash-arc = { git = "https://github.com/jam1garner/smash-arc", default-features = false}
skyline = { git = "https://github.com/Raytwo/skyline-rs", branch="preview" }
skyline-config = { git = "https://github.com/skyline-rs/skyline-config" }
thiserror = "1.0.43"
semver = { version = "1", features = ["serde"] }
camino = "1"
