[package]
name = "menus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.11"
skyline-web = "0.1"
skyline-config = { git = "https://github.com/skyline-rs/skyline-config" }
log = "0.4.19"
smash-arc = { git = "https://github.com/jam1garner/smash-arc" }
skyline = { git = "https://github.com/Raytwo/skyline-rs", branch="preview" }
config = { path = "../config" }
semver = { version = "1", features = ["serde"] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
camino = "1"
minreq = { version = "2", features = ["https-native", "json-using-serde"] }

[patch.crates-io]
native-tls = { git = "https://github.com/skyline-rs/rust-native-tls", rev = "f202fca"  }